@@ -39,7 +39,7 @@ namespace lsp
                 static const prop::enum_t ENUM[];
 
             protected:
-                explicit ButtonMode(prop::Listener *listener = NULL): Enum(ENUM, listener) {};
+                explicit ButtonMode(prop::Listener *listener = NULL): Enum(ENUM, BM_NORMAL, listener) {};
 
             public:
                 inline button_mode_t    get() const                 { return button_mode_t(nValue); }
