@@ -39,7 +39,7 @@ namespace lsp
                 static const prop::enum_t ENUM[];
 
             protected:
-                explicit GraphFrameFunction(prop::Listener *listener = NULL): Enum(ENUM, listener) {};
+                explicit GraphFrameFunction(prop::Listener *listener = NULL): Enum(ENUM, GFF_DEFAULT, listener) {};
 
             public:
                 inline graph_frame_function_t   get() const                     { return graph_frame_function_t(nValue);        }
