@@ -39,7 +39,7 @@ namespace lsp
                 static const prop::enum_t ENUM[];
 
             protected:
-                explicit Scrolling(prop::Listener *listener = NULL): Enum(ENUM, listener) {};
+                explicit Scrolling(prop::Listener *listener = NULL): Enum(ENUM, SCROLL_NONE, listener) {};
 
             public:
                 inline scrolling_t          get() const                 { return scrolling_t(nValue);           }
