@@ -1,0 +1,38 @@
+/*
+ * Copyright (C) 2021 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2021 Vladimir Sadovnikov <sadko4u@gmail.com>
+ *
+ * This file is part of lsp-tk-lib
+ * Created on: 14 мая 2021 г.
+ *
+ * lsp-tk-lib is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * any later version.
+ *
+ * lsp-tk-lib is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with lsp-tk-lib. If not, see <https://www.gnu.org/licenses/>.
+ */
+
+#include <lsp-plug.in/tk/tk.h>
+
+namespace lsp
+{
+    namespace tk
+    {
+        const prop::enum_t DrawMode::ENUM[] =
+        {
+            { "classic",        DM_CLASSIC          },
+            { "modern",         DM_MODERN           },
+            { NULL,             -1                  }
+        };
+
+    } /* namespace tk */
+} /* namespace lsp */
+
+
